--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,13 +6,13 @@
   <nav class="md:block hidden">
     <ul class="gap-2 py-2 px-1 flex">
       <li class="text-white hover:text-yellow-200 border-b-4 py-2 px-3">
-        <a href="">Home</a>
+        <a href="" routerLink="checkout">Home</a>
       </li>
       <li class="text-white hover:text-yellow-200 py-2 px-3">
-        <a href="">Contacto</a>
+        <a href="" routerLink="">Lista</a>
       </li>
       <li class="text-white hover:text-yellow-200 py-2 px-3 rounded-sm">
-        <a href="">Galeria</a>
+        <a href="" routerLink="productos">Productos</a>
       </li>
     </ul>
   </nav>
