--- a/src/app/components/table-list/table-list.component.html
+++ b/src/app/components/table-list/table-list.component.html
@@ -1,4 +1,6 @@
-<table class="minw-full border-collapse border-gray-200 shadow-sm text-left">
+<table
+  class="minw-full border-collapse border-gray-200 shadow-sm text-left mt-4"
+>
   <thead class="rounded-md">
     <tr class="border-b-2 bg-black text-white">
       <th scope="col" class="px-3 py-2">Id</th>
