--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,15 +1,31 @@
-<div class="card relative">
+<div class="card relative hover:border-2">
   <img
     src="https://codigoencasa.com/content/images/size/w2000/2023/03/Tw---angular---1-.jpeg"
     class="hover:opacity-75 transition-opacity"
     alt=""
   />
-  <p class="text-lg text-center font-bold py-2">{{ cardTitle }}</p>
-  <p class="text-slate-800 overflow-hidden">
+  <p class="card-title">{{ cardTitle }}</p>
+  <p class="card-body">
     Card content Lorem ipsum, dolor sit amet consectetur adipisicing elit.
     Molestias culpa ipsum cum libero nam exercitationem suscipit corrupti nemo,
     voluptatibus soluta aperiam? Saepe illum tempora maiores odio, nobis ea amet
     omnis.
   </p>
-  <button class="btn">Ver más</button>
+  <div class="flex justify-center py-3 w-1/2 mx-auto">
+    <fa-icon
+      [icon]="minus"
+      size="lg"
+      class="bg-slate-200 rounded-md p-3 w-1/3 text-center"
+    />
+    <input
+      type="text"
+      class="text-center w-1/3 focus:border-none"
+      placeholder="cantidad"
+    />
+    <fa-icon
+      [icon]="more"
+      size="lg"
+      class="bg-slate-200 rounded-md p-3 w-1/3 text-center"
+    />
+  </div>
 </div>
